Fixed Java Version and Spring.boot.framework occurs